src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --bg-100: 250 250 250;
    --bg-200: 248 248 248;
    --bg-300: 242 242 242;

    --fg-100: 60 60 60;
    --fg-200: 10 10 10;

    --border-100: 225 225 225;
    --border-200: 215 215 215;

    --shadow-elevation: 0 0 10px hsla(0, 0%, 50%, 0.1),
      10px 10px 20px hsla(0, 0%, 50%, 0.1);

    --scroll-bar: 220 220 220;

    --brand: 0 51 102;
  }

  html.dark {
    --bg-100: 20 20 20;
    --bg-200: 22 22 22;
    --bg-300: 28 28 28;

    --fg-100: 180 180 180;
    --fg-200: 230 230 230;

    --border-100: 40 40 40;
    --border-200: 50 50 50;

    --shadow-highlight: inset 0 0.5px 0 0.5px hsla(0, 0%, 100%, 0.05);

    --scroll-bar: 50 50 50;

    --brand: 210 210 210;
  }
}

/* Full height app */
html,
body,
#__next {
  @apply h-full bg-bg-100 text-fg-200;
}

/* Replace default focus outline */
a,
button {
  @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2;
  @apply focus-visible:ring-blue-200/80 focus-visible:ring-offset-blue-400;
  @apply dark:focus-visible:ring-blue-400/20 dark:focus-visible:ring-offset-blue-600;
}

/* Focus ring for input */
input {
  @apply focus:outline-none focus:ring-2 focus:ring-blue-200/80 focus:ring-offset-2 focus:ring-offset-blue-400;
  @apply dark:focus:ring-blue-400/20 dark:focus:ring-offset-blue-600;
}

* {
  /* Remove default webkit tap hightlight */
  -webkit-tap-highlight-color: transparent;
  /* Thinner scrollbar for Firefox */
  scrollbar-width: thin;
  scrollbar-color: rgb(var(--scroll-bar)) transparent;
}

/* Scrollbar styles for desktop webkit browsers */
@media (pointer: fine) {
  ::-webkit-scrollbar {
    @apply h-1 w-1;
  }

  ::-webkit-scrollbar-track {
    @apply bg-transparent;
  }

  ::-webkit-scrollbar-thumb {
    @apply rounded-full;
    background-color: rgb(var(--scroll-bar));
  }
}

